--- a/html/_/contacts.html
+++ b/html/_/contacts.html
@@ -44,17 +44,13 @@ crossorigin=""/>
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
 
 <div class="mail">
-  <p lang="fr">Si vous souhaitez nous faire part d'une remarque ou d'une interrogation, merci de rentrer en contact avec l'une des adresses mails suivantes : </p>
-  <p lang="en">If you would like to share a remark or a request, please contact one of these two email addresses : </p>
+  <p lang="fr">Si vous souhaitez nous faire part d'une remarque ou d'une interrogation, merci de rentrer en contact avec l'adresse mail suivante : </p>
+  <p lang="en">If you would like to share a remark or a request, please contact : </p>
   <p>
     <ul class="fa-ul">
       <li>
         <span class="fa-li"><i class="far fa-envelope"></i></span>
         <h2 class="text-size-14px">Maxime BAUD : <a href="mailto:maxime@scentree.co"> maxime@scentree.co </a></h2>
-      </li>
-      <li>
-        <span class="fa-li"><i class="far fa-envelope"></i></span>
-        <h2 class="text-size-14px">Thomas ESPINASSE : <a href="mailto:thomas@scentree.co"> thomas@scentree.co </a></h2>
       </li>
     </ul>
   </p>
